<resources>
    <string name="app_name">Login</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="re_pass">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="home">Welcome </string>
    <string name="homeLabel">Home</string>
    <string name = "registerLabel">Register</string>
</resources>